--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <ul class="flex space-x-6">
                 <li><a href="shipping.html" class="hover:underline">Shipping</a></li>
                 <li><a href="Track.html" class="hover:underline">Track</a></li>
-                <li><a href="Quran.html" class="hover:underline">Contact</a></li>
+                <li><a href="Lar.html" class="hover:underline">Contact</a></li>
             </ul>
         </nav>
     </header>
