--- a/Lar.html
+++ b/Lar.html
@@ -48,7 +48,7 @@
     <div class="container mx-auto p-6 flex justify-center">
         <div class="product-grid bg-white p-6 rounded-lg shadow-md grid grid-cols-1 md:grid-cols-2 gap-8">
             <div class="product-image">
-                <img src="product-image.jpg" alt="Modern Tech Product" class="rounded-lg w-full">
+                <img src="IMG_3101.jpeg" alt="Modern Tech Product" class="rounded-lg w-full">
             </div>
             <div class="product-details flex flex-col justify-center">
                 <h1 class="text-2xl font-bold mb-4">Modern Tech Product</h1>
