--- a/Track.html
+++ b/Track.html
@@ -3,93 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Track Your Order - Velyora</title>
+    <title>Track Your Order - VELYORA</title>
+
+    <!-- ✅ استيراد Tailwind CSS والخطوط -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-            background-color: #f9f9f9;
-        }
-        .header {
-            background: #301c41;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-            font-size: 24px;
-            font-weight: bold;
-        }
-        .tracking-container {
-            max-width: 500px;
-            margin: 50px auto;
-            background: white;
-            padding: 30px;
-            border-radius: 12px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
-        }
-        .tracking-container h2 {
-            font-size: 24px;
-            font-weight: bold;
-            color: #333;
-        }
-        .tracking-container p {
-            color: #666;
-            margin-bottom: 20px;
-        }
-        .tracking-input {
-            width: 100%;
-            padding: 15px;
-            font-size: 16px;
-            border: 2px solid #ccc;
-            border-radius: 8px;
-            text-align: center;
-            margin-bottom: 15px;
-        }
-        .track-button {
-            width: 100%;
-            background-color: #007bff;
-            color: white;
-            font-size: 18px;
-            font-weight: bold;
-            padding: 15px;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: 0.3s;
-        }
-        .track-button:hover {
-            background-color: #0056b3;
-        }
-        .footer {
-            background: #301c41;
-            color: white;
-            text-align: center;
-            padding: 15px;
-            margin-top: 40px;
-        }
-    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Tajawal:wght@300;400;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <div class="header">VELYORA</div>
-    <div class="tracking-container">
-        <h2>📦 Track Your Order</h2>
-        <p>Enter your tracking number to check your delivery status.</p>
-        <input type="text" id="trackingNumber" class="tracking-input" placeholder="Enter your tracking number">
-        <button onclick="trackOrder()" class="track-button">Track</button>
-        <p id="trackingResult" class="mt-4 text-red-500"></p>
-    </div>
-    <div class="footer">
-        &copy; 2025 Velyora. All rights reserved. | <a href="#" class="text-gray-300 hover:text-gray-400">Privacy Policy</a> | <a href="#" class="text-gray-300 hover:text-gray-400">Return Policy</a>
-    </div>
+<body class="bg-gray-100 text-gray-900">
+
+    <!-- ✅ Telegram Floating Icon -->
+    <a href="https://t.me/@tt90010" class="telegram-icon" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
+    </a>
+
+    <!-- ✅ VELYORA Header -->
+    <header class="bg-purple-800 text-white p-4 flex justify-between items-center">
+        <h1 class="text-xl font-bold">VELYORA</h1>
+        <nav>
+            <ul class="flex space-x-6">
+                <li><a href="shipping.html" class="hover:underline">Shipping</a></li>
+                <li><a href="track.html" class="hover:underline">Track</a></li>
+                <li><a href="Quran.html" class="hover:underline">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- ✅ Tracking Section -->
+    <section class="container mx-auto p-8 text-center">
+        <h2 class="text-3xl font-bold text-purple-800 mb-6">🔍 Track Your Order</h2>
+        <p class="text-lg text-gray-700 mb-4">Enter your tracking number below to check your order status.</p>
+
+        <!-- Tracking Input & Button -->
+        <div class="max-w-lg mx-auto bg-white p-6 rounded-lg shadow-md">
+            <input type="text" id="trackingNumber" placeholder="Enter Tracking Number"
+                class="w-full p-3 border border-gray-300 rounded-lg text-center focus:outline-none focus:ring-2 focus:ring-purple-600">
+            <button onclick="trackOrder()" 
+                class="mt-4 w-full bg-purple-800 text-white py-3 px-6 rounded-lg hover:bg-purple-700 transition duration-300">
+                Track Order
+            </button>
+        </div>
+
+        <!-- Result Section -->
+        <div id="trackingResult" class="mt-6 hidden max-w-lg mx-auto bg-white p-6 rounded-lg shadow-md">
+            <h3 class="text-xl font-bold text-gray-800">📦 Order Status</h3>
+            <p class="text-gray-600 mt-2" id="statusMessage">Checking status...</p>
+        </div>
+    </section>
+
+    <!-- ✅ Footer -->
+    <footer class="bg-gray-800 text-white text-center p-6 mt-10">
+        <p>&copy; 2025 VELYORA. All rights reserved.</p>
+    </footer>
+
+    <!-- ✅ JavaScript for Tracking -->
     <script>
         function trackOrder() {
-            let trackingNumber = document.getElementById("trackingNumber").value.trim();
-            if (trackingNumber) {
-                window.open(`https://www.17track.net/en/track?nums=${trackingNumber}`, "_blank");
-            } else {
-                document.getElementById("trackingResult").innerText = "❌ Please enter a valid tracking number.";
+            var trackingNumber = document.getElementById("trackingNumber").value;
+            var resultDiv = document.getElementById("trackingResult");
+            var statusMessage = document.getElementById("statusMessage");
+
+            if (trackingNumber === "") {
+                alert("Please enter a tracking number.");
+                return;
             }
+
+            // Simulated tracking status
+            resultDiv.classList.remove("hidden");
+            statusMessage.textContent = "🚀 Your order #" + trackingNumber + " is on the way!";
         }
     </script>
+
 </body>
 </html>
