--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
         <p>&copy; 2025 velyora. All Rights Reserved.</p>
         <p>Need help? Contact us at <a href="mailto:voclen08@gmail.com" class="underline">voclen08@gmail.com</a></p>
         <div class="text-center text-sm text-gray-600 py-4 mt-6">
-           <a href="policies.html#privacy-policy-content" class="text-blue-600 hover:underline">Privacy Policy</a> | 
-           <a href="policies.html#return-policy-content" class="text-blue-600 hover:underline">Return Policy</a> | 
-           <a href="policies.html#about-us-content" class="text-blue-600 hover:underline">About Us</a>
+           <a href="privacy-policy.html" class="text-blue-600 hover:underline">Privacy Policy</a> | 
+           <a href="return-policy.html" class="text-blue-600 hover:underline">Return Policy</a> | 
+           <a href="about.html" class="text-blue-600 hover:underline">About Us</a>
         </div>
     </footer>
 </body>
