--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
         <h1 class="text-xl font-bold">VELYORA</h1>
         <nav>
             <ul class="flex space-x-6">
+                <li><a href="index.html" class="hover:underline">Home</a></li>
                 <li><a href="shipping.html" class="hover:underline">Shipping</a></li>
                 <li><a href="track.html" class="hover:underline">Track</a></li>
             </ul>
