--- a/Lar.html
+++ b/Lar.html
@@ -62,7 +62,9 @@
                 </div>
                 <button class="buy-btn bg-black text-white py-3 px-6 mt-4 rounded-lg hover:bg-gray-800 transition duration-300">
                     Buy Now
+                       <a href="checkout.html" class="mt-6 bg-yellow-500 text-black px-6 py-3 rounded text-lg font-bold"></a>
                 </button>
+                
                 <ul class="features mt-6 space-y-2">
                     <li class="flex items-center">✔️ Advanced technology</li>
                     <li class="flex items-center">✔️ High performance and quality</li>
