--- a/payment.html
+++ b/payment.html
@@ -94,25 +94,20 @@
 
                         alert("📤 Sending Telegram Message:\n" + message);
 
-                        fetch(`https://api.telegram.org/bot7569416193:AAF8Nr7RWGGuhjhUkWrR-oFlDWaiYEVQBmM/sendMessage`, {
+                        fetch("send-telegram.php", {
                             method: "POST",
-                            headers: { "Content-Type": "application/json" },
-                            body: JSON.stringify({
-                                chat_id: "-1001664466794",
-                                text: message,
-                                parse_mode: "Markdown"
-                            })
-                       })
-                       .then(response => response.json())
-                       .then(data => {
-                           if (data.ok) {
-                               alert("📥 Telegram Response: تم الإرسال بنجاح ✅");
-                           } else {
-                               alert("❌ خطأ في إرسال البيانات إلى تيليجرام:\n" + JSON.stringify(data));
-                           }
-                       })
-                       .catch(error => alert("❌ Telegram API error:\n" + error));
-
+                            headers: { "Content-Type": "application/x-www-form-urlencoded" },
+                            body: new URLSearchParams({ message: message })
+                        })
+                        .then(response => response.json())
+                        .then(data => {
+                            if (data.ok) {
+                                alert("📥 Telegram Response: تم الإرسال بنجاح ✅");
+                            } else {
+                                alert("❌ خطأ في إرسال البيانات إلى تيليجرام:\n" + JSON.stringify(data));
+                            }
+                        })
+                        .catch(error => alert("❌ Telegram API error:\n" + error));
                         // ✅ إرسال الطلب إلى `process-order.php`
                         console.log("📤 Sending order data to process-order.php:", orderData);
 
