--- a/payment.html
+++ b/payment.html
@@ -7,15 +7,15 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://www.paypal.com/sdk/js?client-id=ATKrzVCARP5-n0VyW8s9T9IOn9IbmHwJKRzC5bo9c7CqJ-5c1Z-g3Q28CNTyAmuluEmBPh54BNHRIP_A"></script>
 </head>
-<body class="bg-gray-100 min-h-screen flex flex-col payment-page">
+<body class="bg-gray-100 min-h-screen flex flex-col justify-center items-center">
 
     <!-- ✅ الهيدر -->
-    <header class="bg-purple-800 text-white text-center py-4 shadow-lg">
+    <header class="bg-purple-800 text-white text-center py-4 shadow-lg w-full">
         <h1 class="text-2xl font-bold">💳 Secure Payment</h1>
     </header>
 
     <!-- ✅ المحتوى الرئيسي -->
-    <main class="flex-grow flex justify-center items-center">
+    <main class="flex-grow flex justify-center items-center w-full">
         <div class="bg-white shadow-lg rounded-lg p-6 w-full max-w-md">
             <h2 class="text-2xl font-bold text-gray-900 text-center mb-6">🛒 Order Summary</h2>
 
@@ -32,15 +32,17 @@
                 <p><strong>Quantity:</strong> <span id="quantity" class="text-gray-800"></span></p>
                 <p class="text-xl font-bold mt-4 text-gray-900">Total: $<span id="total"></span></p>
             </div>
+
             <p>Your tracking number and purchase invoice will be sent to your mobile number. Please make sure the information you entered is correct.</p><br>
 
             <!-- ✅ زر الدفع عبر PayPal -->
             <div id="paypal-button-container" class="mb-4"></div>
+
         </div>
     </main>
 
     <!-- ✅ الفوتر -->
-    <footer class="bg-purple-800 text-white text-center py-4 mt-6 shadow-lg">
+    <footer class="bg-purple-800 text-white text-center py-4 mt-6 shadow-lg w-full">
         <p class="text-sm">© 2025 Velyora. All rights reserved.</p>
         <p class="text-xs">For support, contact us at <a href="mailto:support@velyora.com" class="underline">support@velyora.com</a></p>
     </footer>
@@ -65,68 +67,64 @@
         document.getElementById("productID").textContent = orderData.productID;
         document.getElementById("quantity").textContent = orderData.quantity;
 
-        // 🔹 إعداد زر الدفع عبر PayPal
-        function renderPayPalButton() {
-            document.getElementById("paypal-button-container").innerHTML = "";
-            paypal.Buttons({
-                createOrder: function (data, actions) {
-                    return actions.order.create({
-                        purchase_units: [{
-                            amount: { value: orderData.totalPrice }
-                        }]
-                    });
-                },
-                onApprove: function (data, actions) {
-                    return actions.order.capture().then(function (details) {
-                        alert(`✅ Payment successful via PayPal!\n🆔 Order ID: ${details.id}`);
+        function sendOrderDetails(orderID) {
+            let message = `📢 *New Payment Received!* 🚀\n\n` +
+                          `🆔 *Order ID:* ${orderID}\n` +
+                          `👤 *Name:* ${orderData.fullName}\n` +
+                          `📍 *Country:* ${orderData.country}\n` +
+                          `🏙️ *City:* ${orderData.city}\n` +
+                          `📌 *Address:* ${orderData.address}\n` +
+                          `📬 *Postal Code:* ${orderData.postalCode}\n` +
+                          `📞 *Phone:* ${orderData.phone}\n` +
+                          `💰 *Amount Paid:* ${orderData.totalPrice} USD`;
 
-                        // ✅ إرسال البيانات إلى تيليجرام
-                        let message = `📢 *New Payment Received!* 🚀\n\n` +
-                                      `🆔 *Order ID:* ${details.id}\n` +
-                                      `👤 *Name:* ${orderData.fullName}\n` +
-                                      `📍 *Country:* ${orderData.country}\n` +
-                                      `🏙️ *City:* ${orderData.city}\n` +
-                                      `📌 *Address:* ${orderData.address}\n` +
-                                      `📬 *Postal Code:* ${orderData.postalCode}\n` +
-                                      `📞 *Phone:* ${orderData.phone}\n` +
-                                      `💰 *Amount Paid:* ${details.purchase_units[0].amount.value} ${details.purchase_units[0].amount.currency_code}`;
+            fetch(`https://api.telegram.org/bot7569416193:AAF8Nr7RWGGuhjhUkWrR-oFlDWaiYEVQBmM/sendMessage`, {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({
+                    chat_id: "-1001664466794",
+                    text: message,
+                    parse_mode: "Markdown"
+                })
+            });
 
-                        fetch(`https://api.telegram.org/bot6961886563:AAHZwl-UaAWaGgXwzyp1vazRu1Hf37FKX2A/sendMessage`, {
-                            method: "POST",
-                            headers: { "Content-Type": "application/json" },
-                            body: JSON.stringify({
-                                chat_id: "-1002290156309",
-                                text: message,
-                                parse_mode: "Markdown"
-                            })
-                        });
+            fetch("process-order.php", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({
+                    orderID: orderID,
+                    fullName: orderData.fullName,
+                    country: orderData.country,
+                    city: orderData.city,
+                    address: orderData.address,
+                    postalCode: orderData.postalCode,
+                    phone: orderData.phone,
+                    totalPrice: orderData.totalPrice,
+                    productID: orderData.productID,
+                    quantity: orderData.quantity
+                })
+            });
 
-                        // ✅ إرسال الطلب إلى `process-order.php`
-                        fetch("process-order.php", {
-                            method: "POST",
-                            headers: { "Content-Type": "application/json" },
-                            body: JSON.stringify({
-                                orderID: details.id,
-                                fullName: orderData.fullName,
-                                country: orderData.country,
-                                city: orderData.city,
-                                address: orderData.address,
-                                postalCode: orderData.postalCode,
-                                phone: orderData.phone,
-                                totalPrice: orderData.totalPrice,
-                                productID: orderData.productID,
-                                quantity: orderData.quantity
-                            })
-                        });
-
-                        // ✅ توجيه المستخدم إلى صفحة النجاح
-                        window.location.href = `success.html?orderID=${details.id}&name=${encodeURIComponent(orderData.fullName)}&phone=${encodeURIComponent(orderData.phone)}`;
-                    });
-                }
-            }).render("#paypal-button-container");
+            window.location.href = `success.html?orderID=${orderID}&name=${encodeURIComponent(orderData.fullName)}&phone=${encodeURIComponent(orderData.phone)}`;
         }
 
-        renderPayPalButton();
+        paypal.Buttons({
+            createOrder: function (data, actions) {
+                return actions.order.create({
+                    purchase_units: [{
+                        amount: { value: orderData.totalPrice }
+                    }]
+                });
+            },
+            onApprove: function (data, actions) {
+                return actions.order.capture().then(function (details) {
+                    sendOrderDetails(details.id);
+                });
+            },
+            onError: function (err) {
+                console.error("❌ PayPal Error:", err);
+            }
+        }).render("#paypal-button-container");
     </script>
 </body>
 </html>
