--- a/checkout.html
+++ b/checkout.html
@@ -8,6 +8,19 @@
 </head>
 <body class="bg-gray-100 min-h-screen flex flex-col justify-center items-center">
 
+
+     <!-- Header -->
+    <header class="bg-purple-800 text-white p-4 flex justify-between items-center">
+        <h1 class="text-xl font-bold">VELYORA</h1>
+        <nav>
+            <ul class="flex space-x-6">
+                <li><a href="index.html" class="hover:underline">Home</a></li>
+                <li><a href="shipping.html" class="hover:underline">Shipping</a></li>
+                <li><a href="Track.html" class="hover:underline">Track</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <div class="bg-white shadow-lg rounded-lg p-6 w-full max-w-md mx-auto">
         <h2 class="text-2xl font-bold text-gray-900 text-center mb-4">🛒 Checkout</h2>
 
