--- a/checkout.html
+++ b/checkout.html
@@ -10,18 +10,21 @@
 
 
      <!-- Header -->
-    <header class="bg-purple-800 text-white p-4">
-        <div class="container mx-auto flex justify-between items-center w-full max-w-4xl">
-             <h1 class="text-xl font-bold">VELYORA</h1>
+    <header class="bg-purple-800 text-white w-full fixed top-0 left-0 z-50 shadow-md">
+        <div class="container mx-auto flex justify-between items-center px-6 py-4 max-w-6xl">
+             <h1 class="text-xl font-bold tracking-wide">VELYORA</h1>
              <nav>
-                 <ul class="flex space-x-6">
+                 <ul class="flex space-x-6 text-lg font-semibold">
                      <li><a href="index.html" class="hover:underline">Home</a></li>
                      <li><a href="shipping.html" class="hover:underline">Shipping</a></li>
                      <li><a href="track.html" class="hover:underline">Track</a></li>
                  </ul>
-             </nav>
-        </div>
-    </header>
+            </nav>
+       </div>
+   </header>
+
+<!-- إضافة هامش علوي حتى لا يغطي الهيدر المحتوى -->
+<div class="mt-20"></div>
 
     <div class="bg-white shadow-lg rounded-lg p-6 w-full max-w-md mx-auto">
         <h2 class="text-2xl font-bold text-gray-900 text-center mb-4">🛒 Checkout</h2>
