--- a/checkout.html
+++ b/checkout.html
@@ -11,13 +11,13 @@
 
      <!-- Header -->
     <header class="bg-purple-800 text-white w-full fixed top-0 left-0 z-50 shadow-md">
-        <div class="container mx-auto flex justify-between items-center px-6 py-4 max-w-6xl">
+        <div class="container mx-auto flex justify-between items-center px-4 py-4 max-w-6xl">
              <h1 class="text-xl font-bold tracking-wide">VELYORA</h1>
              <nav>
                  <ul class="flex space-x-6 text-lg font-semibold">
                      <li><a href="index.html" class="hover:underline">Home</a></li>
                      <li><a href="shipping.html" class="hover:underline">Shipping</a></li>
-                     <li><a href="track.html" class="hover:underline">Track</a></li>
+                     <li><a href="Track.html" class="hover:underline">Track</a></li>
                  </ul>
             </nav>
        </div>
