--- a/checkout.html
+++ b/checkout.html
@@ -14,7 +14,7 @@
         <div class="container mx-auto flex justify-between items-center px-6 py-4 max-w-6xl">
              <h1 class="text-xl font-bold tracking-wide">VELYORA</h1>
              <nav>
-                 <ul class="flex space-x-6 text-lg font-semibold">
+                 <ul class="flex space-x-6 text-sm font-semibold">
                      <li><a href="index.html" class="hover:underline">Home</a></li>
                      <li><a href="shipping.html" class="hover:underline">Shipping</a></li>
                      <li><a href="Track.html" class="hover:underline">Track</a></li>
