--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -14,9 +14,9 @@
         <h1 class="text-xl font-bold">VELYORA</h1>
         <nav>
             <ul class="flex space-x-6">
-                <li><a href="index.html" class="hover:underline">Home</a></li>
-                <li><a href="shipping.html" class="hover:underline">Shipping</a></li>
-                <li><a href="Track.html" class="hover:underline">Track</a></li>
+                <li><a href="index.html.html" class="hover:underline">Home</a></li>
+                <li><a href="return-policy.html" class="hover:underline">Return Policy</a></li>
+                <li><a href="about.html" class="hover:underline">About Us</a></li>
             </ul>
         </nav>
     </header>
