--- a/about.html
+++ b/about.html
@@ -15,8 +15,8 @@
         <nav>
             <ul class="flex space-x-6">
                 <li><a href="index.html" class="hover:underline">Home</a></li>
-                <li><a href="shipping.html" class="hover:underline">Shipping</a></li>
-                <li><a href="Track.html" class="hover:underline">Track</a></li>
+                <li><a href="privacy-policy.html" class="hover:underline">Privacy Policy</a></li>
+                <li><a href="return-policy.html" class="hover:underline">Return Policy</a></li>
             </ul>
         </nav>
     </header>
