--- a/about.html
+++ b/about.html
@@ -10,18 +10,16 @@
 <body class="bg-gray-100 text-gray-900">
 
     <!-- ✅ VELYORA Header -->
-    <header class="bg-purple-800 text-white w-full fixed top-0 left-0 z-50 shadow-md">
-        <div class="container mx-auto flex justify-between items-center px-6 py-4 max-w-6xl">
-        <h1 class="text-xl font-bold">VELYORA</h1>
+    <!-- ✅ VELYORA Header -->
+    <header class="bg-purple-800 text-white p-4 flex justify-between items-center">
+        <h1 href="index.html" class="text-xl font-bold">VELYORA</h1>
         <nav>
-            <ul class="flex space-x-8 text-lg font-medium">
-                <li><a href="index.html" class="hover:underline">Home</a></li>
-                <li><a href="privacy-policy.html" class="hover:underline">Privacy Policy</a></li>
-                <li><a href="return-policy.html" class="hover:underline">Return Policy</a></li>
+            <ul class="flex space-x-6">
+                <li><a href="shipping.html" class="hover:underline">Shipping</a></li>
+                <li><a href="Track.html" class="hover:underline">Track</a></li>
             </ul>
         </nav>
     </header>
-
     <!-- ✅ About Us Content -->
     <section class="container mx-auto p-8 bg-white shadow-md rounded-lg mt-8">
         <h2 class="text-3xl font-bold text-purple-800 mb-6">🌟 About VELYORA</h2>
