--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <!-- ✅ VELYORA Header -->
     <!-- ✅ VELYORA Header -->
     <header class="bg-purple-800 text-white p-4 flex justify-between items-center">
-        <h1 href="index.html" class="text-xl font-bold">VELYORA</h1>
+        <li><h1 href="index.html" class="text-xl font-bold">VELYORA</h1></li>
         <nav>
             <ul class="flex space-x-6">
                 <li><a href="shipping.html" class="hover:underline">Shipping</a></li>
