--- a/about.html
+++ b/about.html
@@ -12,11 +12,11 @@
     <!-- ✅ VELYORA Header -->
     <!-- ✅ VELYORA Header -->
     <header class="bg-purple-800 text-white p-4 flex justify-between items-center">
-        <li><h1 href="index.html" class="text-xl font-bold">VELYORA</h1></li>
+        <h1 class="text-xl font-bold">VELYORA</h1>
         <nav>
             <ul class="flex space-x-6">
-                <li><a href="shipping.html" class="hover:underline">Shipping</a></li>
-                <li><a href="Track.html" class="hover:underline">Track</a></li>
+                <li><a href="privacy-policy.html" class="hover:underline">Privacy Policy</a></li>
+                <li><a href="return-policy.html" class="hover:underline">Return Policy</a></li>
             </ul>
         </nav>
     </header>
