--- a/about.html
+++ b/about.html
@@ -12,7 +12,9 @@
     <!-- ✅ VELYORA Header -->
     <!-- ✅ VELYORA Header -->
     <header class="bg-purple-800 text-white p-4 flex justify-between items-center">
-        <h1 class="text-xl font-bold">VELYORA</h1>
+        <h1 class="text-xl font-bold">
+            <a href="index.html" class="text-blue-600 hover:underline">VELYORA</a>
+        </h1>
         <nav>
             <ul class="flex space-x-6">
                 <li><a href="privacy-policy.html" class="hover:underline">Privacy Policy</a></li>
