--- a/Track.html
+++ b/Track.html
@@ -27,7 +27,7 @@
             <ul class="flex space-x-6">
                 <li><a href="shipping.html" class="hover:underline">Shipping</a></li>
                 <li><a href="Track.html" class="hover:underline">Track</a></li>
-                <li><a href="Contact.html" class="hover:underline">Contact</a></li>
+                <li><a href="contact.html" class="hover:underline">Contact</a></li>
             </ul>
         </nav>
     </header>
