--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,13 @@
     <!-- ✅ الهيدر -->
     <header class="bg-purple-800 text-white py-4 shadow-md">
         <div class="container mx-auto flex justify-between items-center px-6 max-w-6xl">
-            <h1 class="text-2xl font-bold tracking-wide">VELYORA</h1>
+            <h1 class="text-xl font-bold">
+                <a href="index.html" class="text-white-600 hover:underline">VELYORA</a>
+            </h1>
             <nav>
                 <ul class="flex space-x-8 text-lg font-medium">
-                    <li><a href="index.html" class="hover:underline">Home</a></li>
                     <li><a href="shipping.html" class="hover:underline">Shipping</a></li>
-                    <li><a href="track.html" class="hover:underline">Track</a></li>
-                    <li><a href="contact.html" class="hover:underline">Contact</a></li>
+                    <li><a href="Track.html" class="hover:underline">Track</a></li>
                 </ul>
             </nav>
         </div>
