--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -11,7 +11,9 @@
 
     <!-- ✅ VELYORA Header -->
     <header class="bg-purple-800 text-white p-4 flex justify-between items-center">
-        <h1 class="text-xl font-bold">VELYORA</h1>
+        <h1 class="text-xl font-bold">
+            <a href="index.html" class="text-white-600 hover:underline">VELYORA</a>
+        </h1>
         <nav>
             <ul class="flex space-x-6">
 
