--- a/shipping.html
+++ b/shipping.html
@@ -34,12 +34,14 @@
 
     <!-- Header -->
     <header class="bg-purple-800 text-white p-4 flex justify-between items-center">
-        <h1 class="text-xl font-bold">VELYORA</h1>
+        <h1 class="text-xl font-bold">
+            <a href="index.html" class="text-white-600 hover:underline">VELYORA</a>
+        </h1>
         <nav>
             <ul class="flex space-x-6">
-                <li><a href="index.html" class="hover:underline">Home</a></li>
                 <li><a href="shipping.html" class="hover:underline">Shipping</a></li>
                 <li><a href="Track.html" class="hover:underline">Track</a></li>
+                <li><a href="contact.html" class="hover:underline">Contact</a></li>
             </ul>
         </nav>
     </header>
